--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -4,11 +4,11 @@
     "description": "The name of the extension."
   },
   "headingTagline": {
-    "message": "Preview the hottest tracks on the web.",
+    "message": "Discover and preview popular tracks on the web.",
     "description": "The subheading tagline."
   },
   "extDescription": {
-    "message": "Discover, preview and purchase the hottest songs on the web.",
+    "message": "Discover, preview and purchase popular songs on the web.",
     "description": "The description under the name of the extension in the extensions page."
   }
 }
